GearsetPOC/force-app/main/default/objects/Metafour_Capacity_Luggage_Booking__c/Metafour_Capacity_Luggage_Booking__c.object-meta.xml
<CustomObject>
    <label>Capacity Defenition Luggage Booking</label>
    <nameField>
        <displayFormat>C-{0000}</displayFormat>
        <label>Capacity Defenition Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Capacity Defenition Luggage Booking</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>