GearsetPOC/force-app/main/default/objects/Metafour_Capacity_Luggage_Booking__c/fields/Days_of_Week__c.field-meta.xml
<CustomField>
    <fullName>Days_of_Week__c</fullName>
    <label>Days of Week</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Mon</fullName>
            </value>
            <value>
                <fullName>Tue</fullName>
            </value>
            <value>
                <fullName>Wed</fullName>
            </value>
            <value>
                <fullName>Thu</fullName>
            </value>
            <value>
                <fullName>Fri</fullName>
            </value>
            <value>
                <fullName>Sat</fullName>
            </value>
            <value>
                <fullName>Sun</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>