GearsetPOC/force-app/main/default/objects/Metafour_Capacity_Luggage_Booking__c/fields/Effective_FromDate_c__c.field-meta.xml
<CustomField>
    <fullName>Effective_FromDate_c__c</fullName>
    <label>Effective From</label>
    <type>Date</type>
</CustomField>