GearsetPOC/force-app/main/default/objects/Metafour_Capacity_Luggage_Booking__c/fields/Excess_Luggage_under_85cm__c.field-meta.xml
<CustomField>
    <fullName>Excess_Luggage_under_85cm__c</fullName>
    <label>Excess Luggage under 85cm</label>
    <length>10</length>
    <type>Text</type>
</CustomField>