GearsetPOC/force-app/main/default/objects/Metafour_Capacity_Luggage_Booking__c/fields/Exclude_Public_Holidays__c.field-meta.xml
<CustomField>
    <fullName>Exclude_Public_Holidays__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Exclude Public Holidays</label>
    <type>Checkbox</type>
</CustomField>