GearsetPOC/force-app/main/default/objects/Metafour_Capacity_Luggage_Booking__c/fields/From_Station__c.field-meta.xml
<CustomField>
    <fullName>From_Station__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>From Station</label>
    <referenceTo>Stations__c</referenceTo>
    <relationshipLabel>Capacity Defenition Luggage Booking</relationshipLabel>
    <relationshipName>Capacity_Defenition_Luggage_Booking</relationshipName>
    <type>Lookup</type>
</CustomField>