GearsetPOC/force-app/main/default/objects/Metafour_Capacity_Luggage_Booking__c/fields/Max_no_of_Excess_Luggage__c.field-meta.xml
<CustomField>
    <fullName>Max_no_of_Excess_Luggage__c</fullName>
    <label>Max no of Excess Luggage</label>
    <length>5</length>
    <type>Text</type>
</CustomField>