GearsetPOC/force-app/main/default/objects/Metafour_Capacity_Luggage_Booking__c/fields/To_Station__c.field-meta.xml
<CustomField>
    <fullName>To_Station__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>To Station</label>
    <referenceTo>Stations__c</referenceTo>
    <relationshipLabel>Capacity Defenition Luggage Booking (To Station)</relationshipLabel>
    <relationshipName>To_Station</relationshipName>
    <type>Lookup</type>
</CustomField>