GearsetPOC/force-app/main/default/objects/Metafour_Capacity_Luggage_Booking__c/fields/Train_Time__c.field-meta.xml
<CustomField>
    <fullName>Train_Time__c</fullName>
    <label>Train Time</label>
    <length>10</length>
    <type>Text</type>
</CustomField>