GearsetPOC/force-app/main/default/objects/Metafour_Capacity_Luggage_Booking__c/fields/VIP_Services__c.field-meta.xml
<CustomField>
    <fullName>VIP_Services__c</fullName>
    <label>VIP Services</label>
    <length>10</length>
    <type>Text</type>
</CustomField>